--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "plugin-pay",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "postinstall": "flex-plugin pre-script-check"
   },
   "dependencies": {
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "twilio-sync": "^0.12.2",
-    "flex-plugin-scripts": "4.3.2-beta.0"
+    "@emotion-icons/fa-solid": "^2.15.0",
+    "@emotion/react": "^11.1.5",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@twilio-paste/core": "^16.0.1",
+    "@twilio-paste/icons": "^9.3.0",
+    "@twilio/flex-plugin-scripts": "^5.2.0",
+    "prop-types": "^15.7.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "twilio-sync": "^3.2.2"
   },
   "devDependencies": {
-    "@twilio/flex-ui": "^1"
+    "@twilio/flex-ui": "2.0.0-beta.3"
   }
 }
